# remake_protocol

./: .gitignore  Anchor.toml  next.config.js  package.json  readme.md
migrations/: deploy.ts
programs/solana-meme-alchemy/: Cargo.toml
programs/solana-meme-alchemy/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/solana-meme-alchemy/src/instructions/: init_pool.rs  init_stake_entry.rs  mod.rs  stake.rs  unstake.rs
src/IDL/: idl.json
src/components/: AppBar.tsx  ContentContainer.tsx  Footer.tsx  account-select.tsx  create-pool-form.tsx  createPool.tsx  getPools.tsx  launchpad.tsx
src/components/nav-element/: index.tsx
src/components/ui/: command.tsx
src/hooks/: useAnalyze.ts  useSwip.ts
src/lib/: types.ts
src/pages/: _app.tsx  pools.tsx  trade.tsx
src/styles/: globals.css
src/views/: index.tsx
src/views/home/: index.tsx
src/views/pools/: index.tsx
src/views/trade/: index.tsx
tests/: solana-meme-alchemy.ts
