[package]
name = "solana-meme-alchemy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_meme_alchemy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-program = "~1.10.29"
spl-token = "3.3.0"
getrandom = { version = "0.1.14", features = ["dummy"] }
